# veda-research-playground

./: README.md
veda-cli/: .gitignore  README.md  pyproject.toml
veda-cli/notebooks/: veda-sdk-ecco-ec2-guide.ipynb
veda-cli/veda_cli/: main.py
veda-cli/veda_cli/applications/: __init__.py
veda-cli/veda_cli/applications/ecco/: __init__.py  ecco_app.py
veda-cli/veda_cli/datasets/: __init__.py
veda-cli/veda_cli/executions/: __init__.py  ouput.py
